--- a/Salty/manifests/Salty_Deployment.yaml
+++ b/Salty/manifests/Salty_Deployment.yaml
@@ -14,10 +14,4 @@ spec:
     spec:
       containers:
       - name: salty
-        image: quayecosystem-quay.quay-enterprise.svc.cluster.local/cloudlet/salty:latest
-        livenessProbe:
-          exec:  
-            command: 
-            - cat
-            - /app/Salty.py
-          initialDelaySeconds: 15
+        image: docker.io/dolevalgam/salty:latest
