--- a/3Scale-Anton/APICast-Helm/values.yaml
+++ b/3Scale-Anton/APICast-Helm/values.yaml
@@ -16,4 +16,6 @@ CONFIGURATION_CACHE: "60"
 REDIS_URL: 
 MANAGEMENT_API: "status"
 OPENSSL_VERIFY: "false"
-REPORTING_THREADS: "0"
+EPORTING_THREADS: "0"
+THREE_SCALE_TOKEN: "329533fb7f56e125c6f2590317ad097a7279913bbaaf3e059f9234e6cce469c7"
+OPENSHIFT_URL: "3scale-admin.apps.anton-openshift.cloudlet-dev.com"
