--- a/3Scale-Anton/Useful-Yaml/system-storage.yml
+++ b/3Scale-Anton/Useful-Yaml/system-storage.yml
@@ -1,10 +1,6 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  annotations:
-    openshift.io/generated-by: OpenShiftNewApp
-    volume.beta.kubernetes.io/storage-provisioner: kubernetes.io/azure-disk
-  creationTimestamp: "2020-03-16T06:55:55Z"
   finalizers:
   - kubernetes.io/pvc-protection
   labels:
@@ -12,15 +8,11 @@ metadata:
     threescale_component: system
     threescale_component_element: app
   name: system-storage
-  namespace: 3scale
-  resourceVersion: "180056"
-  selfLink: /api/v1/namespaces/3scale/persistentvolumeclaims/system-storage
-  uid: 694ddd9b-efbd-407c-9553-c059acb80e45
 spec:
   accessModes:
   - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
-  storageClassName: azure-rox
+  storageClassName: azure-rwx
   volumeName: "pv-rwx" 
