--- a/3Scale-Anton/Useful-Yaml/mysql-storage.yml
+++ b/3Scale-Anton/Useful-Yaml/mysql-storage.yml
@@ -1,9 +1,6 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  annotations:
-    openshift.io/generated-by: OpenShiftNewApp
-  creationTimestamp: "2020-03-16T06:55:55Z"
   finalizers:
   - kubernetes.io/pvc-protection
   labels:
@@ -11,16 +8,12 @@ metadata:
     threescale_component: system
     threescale_component_element: mysql
   name: mysql-storage
-  namespace: 3scale
-  resourceVersion: "151349"
-  selfLink: /api/v1/namespaces/3scale/persistentvolumeclaims/mysql-storage
-  uid: cdd25149-b9b6-45fb-bd44-ea453f2e62ce
 spec:
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-  storageClassName: managed-premium2
+  storageClassName: azure-rwo
   volumeMode: Filesystem
 
