--- a/argocdod/apps/minio-operator/templates/operator.yaml
+++ b/argocdod/apps/minio-operator/templates/operator.yaml
@@ -93,11 +93,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: minio-operator-sa
+  namespace: {{ .Values.namespace }}
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
   name: minio-operator-binding
+  namespace: {{ .Values.namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -105,11 +107,13 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: minio-operator-sa
+  namespace: {{ .Values.namespace }}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: minio-operator
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: 1
   selector:
