--- a/argocdod/templates/minio-operator.yaml
+++ b/argocdod/templates/minio-operator.yaml
@@ -13,5 +13,8 @@ spec:
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
   helm:
+    parameters:
+    - name: namespace
+      value: argocdod
     valueFiles:
     - values.yaml
