--- a/argocdod/apps/salty/templates/Salty_Deployment.yaml
+++ b/argocdod/apps/salty/templates/Salty_Deployment.yaml
@@ -14,4 +14,4 @@ spec:
     spec:
       containers:
       - name: salty
-        image: "{{ .Values.image.source }}{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        image: "{{ .Values.image.source }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
