--- a/3Scale-Anton/APICast-Helm/templates/deployment.yaml
+++ b/3Scale-Anton/APICast-Helm/templates/deployment.yaml
@@ -21,34 +21,62 @@ spec:
             secretKeyRef:
               name: "{{.CONFIGURATION_URL_SECRET}}"
               key: password
+{{- if .CONFIGURATION_FILE_PATH }}
         - name: THREESCALE_CONFIG_FILE
           value: "{{.CONFIGURATION_FILE_PATH}}"
+{{- end }}
+{{- if .DEPLOYMENT_ENVIRONMENT }}
         - name: THREESCALE_DEPLOYMENT_ENV
           value: "{{.DEPLOYMENT_ENVIRONMENT}}"
+{{- end }}
+{{- if .RESOLVER }}
         - name: RESOLVER
           value: "{{.RESOLVER}}"
+{{- end }}
+{{- if .SERVICES_LIST }}
         - name: APICAST_SERVICES_LIST
           value: "{{.SERVICES_LIST}}"
+{{- end }}
+{{- if .CONFIGURATION_LOADER }}
         - name: APICAST_CONFIGURATION_LOADER
           value: "{{.CONFIGURATION_LOADER}}"
+{{- end }}
+{{- if .LOG_LEVEL }}
         - name: APICAST_LOG_LEVEL
           value: "{{.LOG_LEVEL}}"
+{{- end }}
+{{- if .PATH_ROUTING }}
         - name: APICAST_PATH_ROUTING
           value: "{{.PATH_ROUTING}}"
+{{- end }}
+{{- if .RESPONSE_CODES }}
         - name: APICAST_RESPONSE_CODES
           value: "{{.RESPONSE_CODES}}"
+{{- end }}
+{{- if .CONFIGURATION_CACHE }}
         - name: APICAST_CONFIGURATION_CACHE
           value: "{{.CONFIGURATION_CACHE}}"
+{{- end }}
+{{- if .REDIS_URL }}
         - name: REDIS_URL
           value: "{{.REDIS_URL}}"
+{{- end }}
+{{- if .MANAGEMENT_API }}
         - name: APICAST_MANAGEMENT_API
           value: "{{.MANAGEMENT_API}}"
+{{- end }}
+{{- if .OPENSSL_VERIFY }}
         - name: OPENSSL_VERIFY
           value: "{{.OPENSSL_VERIFY}}"
-        - name: APICAST_REPORTING_THREADS
+{{- end }}
+{{- if .REPORTING_THREADS }}
+        - name: APICAST_REPORTING_THREADS 
           value: "{{.REPORTING_THREADS}}"
+{{- end }}
+{{- if .APICAST_WORKERS }}
         - name: APICAST_WORKERS
           value: "{{.APICAST_WORKERS}}"
+{{- end }}
         image: "{{.IMAGE_NAME}}"
         imagePullPolicy: Always
         name: "{{.APICAST_NAME}}"
