--- a/Salty/manifests/Salty_Deployment.yaml
+++ b/Salty/manifests/Salty_Deployment.yaml
@@ -15,3 +15,9 @@ spec:
       containers:
       - name: salty
         image: docker.io/dolevalgam/salty:latest
+        env:
+          - name: LOCAL_TOKEN_SECRET
+            valueFrom:
+              secretKeyRef:
+                name: local-quay-token-secret
+                key: token
