--- a/argocdod/apps/APICast-Helm/Chart.yaml
+++ b/argocdod/apps/APICast-Helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: acpicast
+name: 3scale-apicast2.7
 description: An apicast for 3Scale
 
 # A chart can be either an 'application' or a 'library' chart.
