--- a/argocdod/apps/APICast-Helm/values.yaml
+++ b/argocdod/apps/APICast-Helm/values.yaml
@@ -19,3 +19,5 @@ OPENSSL_VERIFY: "false"
 EPORTING_THREADS: "0"
 THREE_SCALE_TOKEN: "f4832a552a86a44f9923ddcdc9b50ea8ed6a20cef8577cc0ed1f6827f30ac8ac"
 OPENSHIFT_URL: "3scale-admin.apps.ocp43-prod.cloudlet-dev.com"
+PROJ_NAME: "demo-app"
+OC_WILDCARD: "apps.ocp43-prod.cloudlet-dev.com"
