--- a/argocdod-tests/tasks/minio-operator.yaml
+++ b/argocdod-tests/tasks/minio-operator.yaml
@@ -3,11 +3,11 @@
   block:
     - name: Deploying YAML
       k8s:
-        definition: "{{ lookup('file', 'yamls/minio-instance.yaml') }}"
+        definition: "{{ lookup('file', 'yamls/minio-instance.yml') }}"
         state: present
         namespace: argocdod
 
-    - name: Waiting for all StatefulSet pods to be ready
+    - name: Waiting for all MinIO StatefulSet pods to be ready
       k8s:
         kind: StatefulSet
         state: present
@@ -16,16 +16,21 @@
       until:
         - "statefulset_status.result.status.readyReplicas is defined"
         - "statefulset_status.result.spec.replicas == statefulset_status.result.status.readyReplicas"
-      retries: 100
-      delay: 1
+      retries: 30
+      delay: 5
     
   rescue:
-    - debug:
-        msg: "TASK: '{{ ansible_failed_task.name }}' FAILED WITH MSG: '{{ ansible_failed_result.msg }}'"
+     - name: Setting test error message
+       set_fact:
+         err_ms: "TASK: {{ ansible_failed_task.name }} FAILED WITH MSG: {{ ansible_failed_result.msg }}"
+         
+     - name: Updating failed_tests
+       set_fact:
+         failed_tests: "{{ failed_tests + [ err_ms ] }}"
+
   always:
-    - name: Undeploy everything
+    - name: Undeploy YAML
       k8s:
-        definition: "{{ lookup('file', 'yamls/minio-instance.yaml') }}"
+        definition: "{{ lookup('file', 'yamls/minio-instance.yml') }}"
         state: absent
         namespace: argocdod
-
