--- a/minio/helm/templates/secrets.yaml
+++ b/minio/helm/templates/secrets.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.name }}
+  name: {{ .Values.Name }}
   labels:
-    app: {{ .Values.name }}
+    app: {{ .Values.Name }}
 type: Opaque
 data:
   accesskey: {{ if .Values.accessKey }}{{ .Values.accessKey | b64enc | quote }}{{ else }}{{ randAlphaNum 20 | b64enc | quote }}{{ end }}
