--- a/argocdod/templates/keepalive.yaml
+++ b/argocdod/templates/keepalive.yaml
@@ -9,7 +9,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: {{ .Values.spec.project }}
   source:
-    path: argocdod/apps/salty
+    path: argocdod/apps/keepalive
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
   helm:
