--- a/3Scale-Anton/APICast-Helm/values.yaml
+++ b/3Scale-Anton/APICast-Helm/values.yaml
@@ -19,5 +19,5 @@ OPENSSL_VERIFY: "false"
 REPORTING_THREADS: "0"
 THREE_SCALE_TOKEN: "f4832a552a86a44f9923ddcdc9b50ea8ed6a20cef8577cc0ed1f6827f30ac8ac"
 OPENSHIFT_URL: "3scale-admin.apps.ocp43-prod.cloudlet-dev.com"
-PROJ_NAME: "demo-app"
+PROJ_NAME: "3scale-apicast"
 OC_WILDCARD: "apps.ocp43-prod.cloudlet-dev.com"
