--- a/argocdod/apps/speedtest/templates/deployment.yaml
+++ b/argocdod/apps/speedtest/templates/deployment.yaml
@@ -1,12 +1,4 @@
 ---
-# Source: quay-enterprise/templates/01_SpeedTest_project.yaml
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: speedtest
-
----
-# Source: salty/templates/02_SpeedTest_Deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -24,3 +16,6 @@ spec:
       containers:
       - name: speedtest
         image: "{{ .Values.image.source }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        envFrom:
+        - configMapRef:
+            name: speedtest-configmap
