--- a/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
+++ b/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
@@ -323,7 +323,8 @@ data:
     [output.splunk]
 
     # Splunk HTTP Event Collector url
-    url = "{{ .Values.splunk_url }}"
+    #url = "{{ .Values.splunk_url }}"
+    url = https://13.90.23.80:8088/services/collector/event
     # You can specify muiltiple splunk URls with
     #
     # urls.0 = https://server1:8088/services/collector/event/1.0
@@ -343,7 +344,8 @@ data:
     urlSelection = random-with-round-robin
 
     # Splunk HTTP Event Collector Token
-    token = "{{ .Values.splunk_token }}"
+    #token = "{{ .Values.splunk_token }}"
+    token = bfb0ea00-fad4-4166-9f20-2e7fedda26fb
 
     # Allow invalid SSL server certificate
     insecure = true
