--- a/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
+++ b/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
@@ -187,8 +187,8 @@ data:
     licenseServerProxyBasicAuth =
 
     # license key
-    #license = "{{ .Values.license_key }}"
-    license = Qkw4TlVBOFJTSE9TVTo0MDA6MTU5NDA0NzY1Nzoy.d95rME87sUw1BkxWJDESANJbMr7PFiEEOXHZAg.MOVIiXtIwEQzMAmBFDOnSIm+RkCrHaP7LQthPg
+    license = "{{ .Values.license_key }}"
+    #license = Qkw4TlVBOFJTSE9TVTo0MDA6MTU5NDA0NzY1Nzoy.d95rME87sUw1BkxWJDESANJbMr7PFiEEOXHZAg.MOVIiXtIwEQzMAmBFDOnSIm+RkCrHaP7LQthPg
 
     # Environment variable $KUBERNETES_NODENAME is used by default to setup hostname
     # Use value below to override specific name
@@ -323,8 +323,9 @@ data:
     [output.splunk]
 
     # Splunk HTTP Event Collector url
-    #url = "{{ .Values.splunk_url }}"
-    url = https://13.90.23.80:8088/services/collector/event
+    url = "{{ .Values.splunk_url }}"
+    #url = https://13.90.23.80:8088/services/collector/event
+    
     # You can specify muiltiple splunk URls with
     #
     # urls.0 = https://server1:8088/services/collector/event/1.0
@@ -344,8 +345,8 @@ data:
     urlSelection = random-with-round-robin
 
     # Splunk HTTP Event Collector Token
-    #token = "{{ .Values.splunk_token }}"
-    token = bfb0ea00-fad4-4166-9f20-2e7fedda26fb
+    token = "{{ .Values.splunk_token }}"
+    #token = bfb0ea00-fad4-4166-9f20-2e7fedda26fb
 
     # Allow invalid SSL server certificate
     insecure = true
