--- a/SpeedTest/download-cloudlet-app/Dockerfile
+++ b/SpeedTest/download-cloudlet-app/Dockerfile
@@ -2,7 +2,7 @@ FROM python:2.7.17-alpine3.11
 
 RUN pip install requests schedule
 
-ADD ./app /app
+ADD ./download-cloudlet-app /app
 WORKDIR /app
 
 CMD python speedtest.py
