--- a/SpeedTest/upload-cloud-app/upload-cloud-helm/templates/Deployment.yaml
+++ b/SpeedTest/upload-cloud-app/upload-cloud-helm/templates/Deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: speedtest-upload-cloud
+{{- with .Values }}
 spec:
   replicas: 1
   selector:
@@ -14,11 +15,19 @@ spec:
     spec:
       containers:
       - name: speedtest-upload
-        image: registry.hub.docker.com/antonz23/upload-cloud-app:latest
+        image: "{{.IMAGE}}" 
+        env:
+        - name: PORT
+          value: "{{.PORT}}"
+        - name: KB_CHUNKS
+          value: "{{.KB_CHUNKS}}"
+        - name: SPLUNK_TOKEN
+          value: "{{.SPLUNK_TOKEN}}"
+        - name: SPLUNK_URL
+          value: "{{.SPLUNK_URL}}"
+        - name: TESTS_PER_CLIENT
+          value: "{{.TESTS_PER_CLIENT}}"
       nodeSelector:
-          type: node-port-exposed
-      env:
-        - name: NODE_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
+          type: "{{.NODE_SELECTOR}}" 
+{{- end }}
+
