--- a/SpeedTest/upload-cloud-app/upload-cloud-helm/values.yaml
+++ b/SpeedTest/upload-cloud-app/upload-cloud-helm/values.yaml
@@ -2,3 +2,10 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 OPENSHIFT_URL: apps.ocp43-prod.cloudlet-dev.com
+PORT: 8000
+KB_CHUNKS : 16
+SPLUNK_TOKEN: "0dde0859-27ff-43aa-b981-3eaca4fa4813"
+SPLUNK_URL: "https://13.90.23.80:8088/services/collector/event"
+TESTS_PER_CLIENT: 1
+IMAGE: "registry.hub.docker.com/antonz23/upload-cloud-app:latest"
+NODE_SELECTOR: "node-port-exposed"
