--- a/argocdod/apps/speedtest-upload/templates/Deployment.yaml
+++ b/argocdod/apps/speedtest-upload/templates/Deployment.yaml
@@ -33,4 +33,6 @@ spec:
           value: "{{.TESTS_INTERVAL}}"
         - name: KB_CHUNKS
           value: "{{.KB_CHUNKS}}"
+        - name: OPENSHIFT_NAME
+          value: "{{.spec.destination.server }}"
 {{- end }}
