--- a/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
+++ b/argocdod/apps/collectorforopenshift/templates/collectorforopenshift.yaml
@@ -1,14 +1,14 @@
-#---
-#apiVersion: v1
-#kind: Namespace
-#metadata:
-#  labels:
-#    app: collectorforopenshift
-#  name: collectorforopenshift
-#  annotations:
-#    openshift.io/node-selector: ''
-#    openshift.io/description: 'Monitoring OpenShift in Splunk, built by Outcold Solutions'
-#    openshift.io/display-name: 'Collector for OpenShift'
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  labels:
+    app: collectorforopenshift
+  name: collectorforopenshift
+  annotations:
+    openshift.io/node-selector: ''
+    openshift.io/description: 'Monitoring OpenShift in Splunk, built by Outcold Solutions'
+    openshift.io/display-name: 'Collector for OpenShift'
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
