--- a/argocdod/apps/speedtest-upload/templates/Deployment.yaml
+++ b/argocdod/apps/speedtest-upload/templates/Deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: speedtest-upload
-        image: {{ .IMAGE }}  
+        image: "{{ .Values.IMAGE }}"  
         env:
         - name: NODE_NAME
           valueFrom:
