--- a/argocdod/templates/speedtest-upload.yaml
+++ b/argocdod/templates/speedtest-upload.yaml
@@ -15,3 +15,6 @@ spec:
   helm:
     valueFiles:
       - values.yaml
+    parameters:
+      - name: OPENSHIFT_URL
+        value: {{ .Values.spec.destination.server }}
