--- a/argocdod/apps/speedtest-upload/values.yaml
+++ b/argocdod/apps/speedtest-upload/values.yaml
@@ -7,4 +7,4 @@ TEST_LENGTH: 5
 TESTS_AMOUNT: 1
 TESTS_INTERVAL: 2
 KB_CHUNKS: 500
-IMAGE: 'registry.hub.docker.com/antonz23/upload-cloudlet-app:latest'
+IMAGE_NAME: 'registry.hub.docker.com/antonz23/upload-cloudlet-app:latest'
