--- a/argocdod/apps/quay-enterprise/templates/quay-enterprise.yaml
+++ b/argocdod/apps/quay-enterprise/templates/quay-enterprise.yaml
@@ -146,6 +146,10 @@ spec:
   redis:
     credentialsSecretName: redis-creds
     imagePullSecretName: redhat-pull-secret
+  clair:
+    enabled: "{{ .Values.CR.clair.enabled }}"
+    imagePullSecretName: redhat-pull-secret
+    updateInterval: "{{ .Values.CR.clair.updateInterval }}"
     
 # Switch to Object Storage
 
