--- a/argocdod/apps/quay-enterprise/Chart.yaml
+++ b/argocdod/apps/quay-enterprise/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: "Deployment of Quay Enterprise with the operator"
+description: "Deployment of Quay Enterprise with its operator"
 name: quay-enterprise
 version: 1.0.0
