Fixed missing env var

--- a/SpeedTest/upload-cloudlet-app/upload-cloudlet-helm/templates/Deployment.yaml
+++ b/SpeedTest/upload-cloudlet-app/upload-cloudlet-helm/templates/Deployment.yaml
@@ -33,4 +33,6 @@ spec:
           value: "{{.TESTS_INTERVAL}}"
         - name: KB_CHUNKS
           value: "{{.KB_CHUNKS}}"
+        - name: OCP_NAME
+          value: "{{.OCP_NAME}}"
 {{- end }}
