--- a/SpeedTest/download-cloud-app/download-cloud-helm/templates/Service.yaml
+++ b/SpeedTest/download-cloud-app/download-cloud-helm/templates/Service.yaml
@@ -2,13 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: speedtest-download
-  namespace: speedtest-cloudapp
 spec:
   selector:
     app: speedtest-download
   ports:
     - name: speedtest-download
       protocol: TCP
-      port: 8000
-      targetPort: 8000
+      port: {{.Values.PORT}}
+      targetPort: {{.Values.PORT}}
 
