--- a/argocdod/apps/quay-enterprise/templates/quay-enterprise.yaml
+++ b/argocdod/apps/quay-enterprise/templates/quay-enterprise.yaml
@@ -120,14 +120,14 @@ metadata:
   namespace: quay-enterprise
 spec:
   quay:
-    nodeSelector:
-      kubernetes.io/hostname: worker-3.ocp43-test.sales.lab.tlv.redhat.com
+    tls:
+        termination: none
     superuserCredentialsSecretName: super-user-quay
     configSecretName: quay-config-creds
     imagePullSecretName: redhat-pull-secret
     persistentVolumeSize: "{{ .Values.CR.quay.persistentVolumeSize }}Gi"
     database:
-      volumeSize: "{{ .Values.CR.db.volumeSize  }}Gi"
+      volumeSize: "{{ .Values.CR.db.volumeSize }}Gi"
       credentialsSecretName: db-creds
     enableRepoMirroring: true
     repoMirrorTLSVerify: false
