--- a/argocdod/apps/speedtest-download/templates/Deployment.yaml
+++ b/argocdod/apps/speedtest-download/templates/Deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: speedtest-download
+  name: speedtest-download-cloudlet
 spec:
   replicas: 1
   selector:
@@ -16,7 +16,18 @@ spec:
       - name: speedtest-download
         image: "{{ .Values.IMAGE_NAME }}"
         ports:
-        - containerPort: {{ .Values.PORT }}
+        - containerPort: 8000
           protocol: TCP
+        env:
+        - name: MAIN_APP_URL 
+          value: "{{ .Values.MAIN_APP_URL }}"
+        - name: SPLUNK_TOKEN
+          value: "{{ .Values.SPLUNK_TOKEN }}"
+        - name: SPLUNK_URL
+          value: "{{ .Values.SPLUNK_URL }}"
+        - name: MIN_CHECK_TIME
+          value: "{{ .Values.MIN_CHECK_TIME }}"
+        - name: OCP_NAME
+          value: "{{ .Values.OCP_NAME }}"
       restartPolicy: Always
 
